--- a/css/style.css
+++ b/css/style.css
@@ -80,60 +80,134 @@ table {
 
 /* ===== 2.0 - Navigation Bar ============================================= */
 
-.nav-bar {
+nav {
     position: fixed;
     top: 0;
     right: 0;
-    background: #252525;
     margin-top: 0;
     width: 100%;
     padding-left: 30px;
     padding-right: 30px;
-}
-
-#main-menu {
+    overflow: hidden;
     text-align: center;
+    background-color: #252525;
+    box-shadow: 0 7px 20px 0 rgba(0,0,0,0.2),
+                0 4px 10px 0 rgba(0,0,0,0.2);
 }
 
-#main-menu ul {
-    display: block;
-    text-align: center;
-    list-style-type: none;
-}
 
-#main-menu li {
+nav ul li {
     display: inline-block;
+    padding: 24px 0;
+}
+
+nav ul li a {
+    display: block;
     margin-left: 24px;
     font-size: 13px;
     font-weight: bold;
     letter-spacing: .15rem;
-    text-transform: uppercase;
-    line-height: 5;
-}
-
-.menu-item li a {
-    display: block;
-    padding: 24px 0;
-}
-
-/* ===== 2.0 - Navigation Bar Hover Effects ================================ */
-
-nav ul li a {
+    line-height: 2;
     color: #fff;
+    text-transform: uppercase;
     text-decoration: none;
+    position: -webkit-sticky;
+    position: sticky;
 }
+
+nav .logo {
+    display: block;
+    position: fixed;
+    float: left;
+    margin-top: 3px;
+}
+
+nav .logo img {
+    width: 95px;
+}
+
+/* ===== 2.1 - Navigation Bar Hover Effects ================================ */
 
 nav ul li a:hover {
-    color: #9fc4ce;
+    color: rgb(136, 195, 69);
     text-decoration: none;
 }
 
 nav ul li a:before {
-    display: block;
     content: '';
     position: absolute;
     top: 0;
     left: 0;
-    width: 0;
-    border-bottom: 1px solid #fff;
+    width: 100%;
+    height: 100%;
+    border-bottom: 2px solid rgb(136, 195, 69);
+    transform-origin: center;
+    z-index: -1;
+    transform: scaleX(0);
+    transition: transform .3s;
+}
+
+nav ul li a:hover:before {
+    transform-origin: center;
+    transform: scaleX(1);
+}
+
+/* ===== 2.2 - Slide Images ================================================= */
+
+.slider-container {
+    position: relative;
+    max-width: 100%;
+    height: 100vh;
+    margin: auto;
+    margin-bottom: 81px;
+    overflow: hidden;
+    z-index: -1;
+}
+
+.slider-item {
+    display: block;
+    position: relative;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    max-width: 100%;
+}
+
+.slider-item img {
+    width: 100%;
+    height: 100vh;
+}
+
+.slider-caption {
+    position: absolute;
+    left: 0;
+    top: 50%;
+    right: 0;
+    text-align: center;
+    color: #fff;
+    padding: 0 54px;
+    z-index: 2;
+    -ms-transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    transform: translateY(-50%)
+}
+
+.intro-txt {
+    font-weight: 500;
+    font-size: 16px;
+    letter-spacing: .03em
+}
+
+.slider-caption h2 {
+    font-size: 108px;
+    letter-spacing: .03em;
+    color: #fff;
+    line-height: 1;
+    margin: 16px 0
+}
+
+.slider-caption .slider-btn {
+    margin-top: 48px
 }
