--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@ menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
 	padding: 0;
-    border: 0;
+    	border: 0;
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
@@ -95,6 +95,9 @@ nav {
                 0 4px 10px 0 rgba(0,0,0,0.2);
 }
 
+nav ul {
+    margin-bottom: 0;
+}
 
 nav ul li {
     display: inline-block;
@@ -124,6 +127,7 @@ nav .logo {
 
 nav .logo img {
     width: 95px;
+    z-index: -1;
 }
 
 /* ===== 2.1 - Navigation Bar Hover Effects ================================ */
@@ -154,60 +158,10 @@ nav ul li a:hover:before {
 
 /* ===== 2.2 - Slide Images ================================================= */
 
-.slider-container {
+.carousel1 {
     position: relative;
-    max-width: 100%;
-    height: 100vh;
-    margin: auto;
-    margin-bottom: 81px;
-    overflow: hidden;
-    z-index: -1;
-}
-
-.slider-item {
-    display: block;
-    position: relative;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    max-width: 100%;
-}
-
-.slider-item img {
-    width: 100%;
-    height: 100vh;
-}
-
-.slider-caption {
-    position: absolute;
-    left: 0;
-    top: 50%;
-    right: 0;
-    text-align: center;
-    color: #fff;
-    padding: 0 54px;
-    z-index: 2;
-    -ms-transform: translateY(-50%);
-    -webkit-transform: translateY(-50%);
-    -moz-transform: translateY(-50%);
-    -o-transform: translateY(-50%);
-    transform: translateY(-50%)
-}
-
-.intro-txt {
-    font-weight: 500;
-    font-size: 16px;
-    letter-spacing: .03em
-}
-
-.slider-caption h2 {
-    font-size: 108px;
-    letter-spacing: .03em;
-    color: #fff;
-    line-height: 1;
-    margin: 16px 0
-}
-
-.slider-caption .slider-btn {
-    margin-top: 48px
+    height: 35rem;
+    margin-top: 4.6rem;
+    color: white;
+    z-index: -2;
 }
